# lottery.multiversex

./: .gitignore  .ignore  Cargo.toml  Doc.md  Justfile  LICENSE  README.md  Taskfile.yml  rust-toolchain.toml  src-config.toml
.github/workflows/: actions.yml  ci.yml  contracts.yml
interactor/: Cargo.toml  state.toml
interactor/src/: i.rs  interact.rs  interact_cli.rs  interactor_main.rs  proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
lotterytoken/: Cargo.toml
lotterytoken/src/: token.rs
meta/: Cargo.toml
meta/src/: main.rs
output/: lottery.abi.json
scenarios/: lottery-complete-game.scen.json  lottery-get-game-status.scen.json  lottery-init.scen.json  lottery-place-bet-invalid-number.scen.json  lottery-place-bet-twice.scen.json  lottery-place-bet-wrong-amount.scen.json  lottery-place-bet.scen.json  lottery-place-multiple-bets.scen.json  lottery.multiversex.scen.json  lottery.scen.json
src/: amm.rs  lottery.multiversex.rs  lottery.rs  token.rs
tests/: lottery.multiversex_scenario_go_test.rs  lottery.multiversex_scenario_rs_test.rs  lottery_scenario_go_test.rs  lottery_scenario_rs_test.rs  lottery_test.rs
